# dungeon-haskell

./: .gitignore  README.md  config.yaml.example  dungeon-haskell.cabal  lefthook.yml  shell.nix  stack.yaml
.claude/: settings.json
app/: Main.hs
docs/: plan.md
scripts/: Dockerfile.build  release.sh
src/Game/: Audio.hs  Config.hs  Core.hs  GameState.hs  Input.hs  Render.hs  Save.hs  Types.hs
src/Game/AI/: Async.hs  Client.hs  LevelContent.hs  Log.hs  Mock.hs  NPCBehaviour.hs  Prompts.hs  QuestGen.hs  Runtime.hs  Types.hs
src/Game/Logic/: Combat.hs  Command.hs  Door.hs  Dungeon.hs  FOV.hs  Inventory.hs  Loot.hs  MonsterAI.hs  Movement.hs  Quest.hs  Ranged.hs  Spawning.hs  Tick.hs  Wizard.hs
src/Game/Save/: Binary.hs  Types.hs
src/Game/State/: Types.hs
src/Game/UI/: Launch.hs  Modals.hs  Prompt.hs
src/Game/Utils/: List.hs
test/Game/: ConfigSpec.hs  CoreSpec.hs  GameStateSpec.hs  SaveSpec.hs
test/Game/AI/: ClientSpec.hs  LevelContentSpec.hs  MockSpec.hs  NPCBehaviourSpec.hs  QuestGenSpec.hs  RuntimeSpec.hs
test/Game/Logic/: CombatSpec.hs  CommandSpec.hs  ConstantsSpec.hs  DoorSpec.hs  DungeonSpec.hs  FOVSpec.hs  InventorySpec.hs  LookupSpec.hs  LootSpec.hs  MovementSpec.hs  PlacementSpec.hs  QuestSpec.hs  RangedSpec.hs  ScoringSpec.hs  SpawningSpec.hs  TickSpec.hs  WizardSpec.hs
test/Game/UI/: LaunchSpec.hs  ModalsSpec.hs  PromptSpec.hs
