cabal-version:       2.2

name:                dungeon-haskell
version:             0.1.0.0
synopsis:            Terminal-based roguelike dungeon crawler
description:         A terminal-based roguelike with a pure-Haskell game
                     logic layer tested via QuickCheck + HSpec and a thin
                     Brick rendering shell.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2026 Author name here
category:            Game
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

common shared
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wredundant-constraints
  build-depends:       base >= 4.7 && < 5

library
  import:              shared
  hs-source-dirs:      src
  exposed-modules:
    Game.Types
    Game.GameState
    Game.Logic.Movement
    Game.Logic.Dungeon
    Game.Logic.Combat
    Game.Logic.MonsterAI
    Game.Logic.Progression
    Game.Logic.FOV
    Game.Logic.Command
    Game.Logic.Inventory
    Game.Logic.Loot
    Game.Render
    Game.Input
    Game.Audio
  build-depends:
    , linear
    , vector
    , containers
    , random
    , brick
    , vty
    , vty-crossplatform
    , proteaaudio-sdl

executable dungeon-haskell
  import:              shared
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
    , dungeon-haskell
    , brick
    , vty
    , vty-crossplatform
    , mtl
    , random
  ghc-options:         -threaded -rtsopts

test-suite dungeon-haskell-test
  import:              shared
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    Game.Logic.MovementSpec
    Game.Logic.DungeonSpec
    Game.Logic.CombatSpec
    Game.Logic.ProgressionSpec
    Game.Logic.FOVSpec
    Game.Logic.CommandSpec
    Game.Logic.InventorySpec
    Game.Logic.LootSpec
    Game.GameStateSpec
  build-depends:
    , dungeon-haskell
    , hspec
    , QuickCheck
    , linear
    , vector
    , containers
    , random
  build-tool-depends:
    hspec-discover:hspec-discover
  ghc-options:         -threaded -rtsopts

source-repository head
  type:     git
  location: https://github.com/githubuser/dungeon-haskell
