cabal-version:       2.2

name:                dungeon-haskell
version:             0.1.0.0
synopsis:            Terminal-based roguelike dungeon crawler
description:         A terminal-based roguelike with a pure-Haskell game
                     logic layer tested via QuickCheck + HSpec and a thin
                     Brick rendering shell.
license:             MIT
license-file:        LICENSE
author:              Jarl André Hübenthal
maintainer:          jarlah@protonmail.com
copyright:           2026 Jarl André Hübenthal
category:            Game
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

common shared
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wredundant-constraints
  build-depends:       base >= 4.7 && < 5

library
  import:              shared
  hs-source-dirs:      src
  exposed-modules:
    Game.Types
    Game.Core
    Game.State.Types
    Game.Logic.Movement
    Game.Logic.Dungeon
    Game.Logic.Combat
    Game.Logic.MonsterAI
    Game.Logic.Progression
    Game.Logic.FOV
    Game.Logic.Command
    Game.Logic.Inventory
    Game.Logic.Loot
    Game.Logic.Chest
    Game.Logic.Ranged
    Game.Logic.Quest
    Game.Logic.Constants
    Game.Logic.Lookup
    Game.Logic.Spawning
    Game.Logic.Placement
    Game.Logic.Door
    Game.Logic.Wizard
    Game.Logic.Tick
    Game.Logic.Scoring
    Game.Render
    Game.UI.Types
    Game.UI.SaveMenu
    Game.UI.Launch
    Game.UI.Modals
    Game.UI.Prompt
    Game.UI.Normal
    Game.Utils.List
    Game.Input
    Game.Audio
    Game.Save.Types
    Game.Save.Binary
    Game.Save
    Game.Config
    Game.AI.Types
    Game.AI.Client
    Game.AI.Prompts
    Game.AI.QuestGen
    Game.AI.NPCBehaviour
    Game.AI.LevelContent
    Game.AI.Mock
    Game.AI.Log
    Game.AI.Async
    Game.AI.Runtime
  build-depends:
    , linear
    , vector
    , vector-binary-instances
    , containers
    , random
    , brick
    , vty
    , vty-crossplatform
    , proteaaudio-sdl
    , binary
    , bytestring
    , directory
    , time
    , filepath
    , splitmix
    , yaml
    , aeson
    , text
    , http-client
    , http-client-tls
    , http-types
    , http-tower-hs
    , async
    , stm
    , transformers

executable dungeon-haskell
  import:              shared
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
    , dungeon-haskell
    , brick
    , vty
    , vty-crossplatform
    , mtl
    , random
    , text
    , containers
    , linear
  ghc-options:         -threaded -rtsopts

test-suite dungeon-haskell-test
  import:              shared
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    Game.Logic.MovementSpec
    Game.Logic.DungeonSpec
    Game.Logic.CombatSpec
    Game.Logic.ProgressionSpec
    Game.Logic.FOVSpec
    Game.Logic.CommandSpec
    Game.Logic.InventorySpec
    Game.Logic.LootSpec
    Game.Logic.ChestSpec
    Game.Logic.RangedSpec
    Game.Logic.QuestSpec
    Game.Logic.MonsterAISpec
    Game.Logic.ConstantsSpec
    Game.Logic.LookupSpec
    Game.Logic.SpawningSpec
    Game.Logic.PlacementSpec
    Game.Logic.DoorSpec
    Game.Logic.WizardSpec
    Game.Logic.TickSpec
    Game.Logic.ScoringSpec
    Game.CoreSpec
    Game.SaveSpec
    Game.UI.TypesSpec
    Game.UI.SaveMenuSpec
    Game.UI.PromptSpec
    Game.UI.LaunchSpec
    Game.UI.ModalsSpec
    Game.ConfigSpec
    Game.AI.ClientSpec
    Game.AI.QuestGenSpec
    Game.AI.MockSpec
    Game.AI.RuntimeSpec
    Game.AI.NPCBehaviourSpec
    Game.AI.LevelContentSpec
  build-depends:
    , dungeon-haskell
    , hspec
    , QuickCheck
    , linear
    , vector
    , containers
    , random
    , bytestring
    , binary
    , temporary
    , text
    , aeson
    , yaml
    , directory
    , filepath
    , vty
  build-tool-depends:
    hspec-discover:hspec-discover
  ghc-options:         -threaded -rtsopts

source-repository head
  type:     git
  location: https://github.com/githubuser/dungeon-haskell
